.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

API Changes:

  * util-core: ByteReader extends the AutoClosable interface to provide
    a notion of resource management. Users should ensure that instances
    of the ByteReader interface are closed after they are no longer
    needed. ``RB_ID=916086``

  * util-collection: Removed deprecated `c.t.u.JMapWrapper`. Use
    `scala.collection.JavaConverters` instead. ``RB_ID=915544``

  * util-core: Removed deprecated methods from `c.t.u.Future`:
      - `rawException`; use `exception` instead
      - `cancel`; use `raise` instead

    Removed deprecated `c.t.u.Futures.select`; use `Future.select` instead.
    Remove deprecated `flatten` method on `c.t.u.Future`; use `Futures.flatten` instead.
    ``RB_ID=915500``
  
  * util-core: Removed deprecated `c.t.u.LongOverflowException`. Use
    `java.lang.ArithmeticException` instead. Removed deprecated
    `c.t.u.LongOverflowArith` and all methods on it:
        - `add`; use Java 8's `Math.addExact` instead
        - `sub`; use Java 8's `Math.subtractExact` instead
        - `mul`; use Java 8's `Math.multiplyExact` instead
    ``RB_ID=915545``

  * util-eval: Removed from the project. ``RB_ID=915430``
    https://finagle.github.io/blog/2017/04/06/announce-removals/

Runtime Behavior Changes:

  * util-core: All `Timers` now handle negative or undefined times/durations in uniform way:
    treat them as zeros (i.e., `Time.epoch`, `Duration.Zero`). ``RB_ID=916008``

6.43.0  2017-04-20

Runtime Behavior Changes:

  * util-core: `Closable.all(..)` will now catch synchronous exceptions thrown
    by any `Closable.close(..)` invocations, and wrap them in a failed Future.
    ``RB_ID=914859``

  * util-stats: InMemoryStatsReceiver's `gauges` member is now safe for